Squashed 'server/liveblog/themes/themes_assets/default/' changes from 40046c8..dd6092b
dd6092b Merge pull request #65 from liveblog/feature/auto-version
9e8dbba fix: load more button visible issue.
52d390a fix: added auto version increase in default theme.
05540b4 Merge pull request #64 from aleksandarjelicic/fixes
388821a added permalink and share
a330f47 headlines
64e8048 Merge pull request #63 from liveblog/feature/permalink
d1ca1f7 Merge branch 'master' into feature/permalink
b515f54 Merge pull request #62 from liveblog/fix/missing-assets_root
cdffb7b chore: build
1d6f866 feature: initial permalink.
2ef05f0 fix: ordering.
c69d6f4 fix: missing `assets_root` property in slideshow and post item.
90ee4f1 Merge pull request #61 from liveblog/fix/default-advertisement
0225cbf chore: added output in test.

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: dd6092bb90a2f70cdb0c3ffd05a1ff6f067e8957

--- a/less/embed.less
+++ b/less/embed.less
@@ -345,7 +345,7 @@ form.comment.hide .comment__wrap, div.comment-sent.hide .comment__wrap {
 
 .lb-posts {
     clear: both;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
     position: relative;
     background: url('data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACwAAAAAAQABAAACAkQBADs=') repeat-x;
     background-size: 50px;
@@ -725,11 +725,60 @@ div.lb-author__avatar {
     opacity: 0;
 }
 
-.lb-post-permalink {
-    position: absolute;
-    top: 10px;
-    right: 10px;
+.lb-post-actions {
+  position: relative;
+  text-align: right;
+  margin-top: 10px;
+  margin-bottom: -20px;
+  visibility: visible;
+}
+
+@media @xlarge {
+  .lb-post-actions {
     visibility: hidden;
+  }
+}
+
+.lb-post:hover .lb-post-actions {
+  visibility: visible;
+}
+
+.lb-post-actions > * {
+  width: 18px;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.lb-post-share {
+
+}
+
+.lb-post-share:hover .lb-post-shareBox {
+  width: 180px;
+}
+
+.lb-post-shareBox {
+  position: absolute;
+  top: -3px;
+  right: 60px;
+  width: 0px;
+  height: 24px;
+  overflow: hidden;
+  transition: width 0.1s;
+}
+
+.lb-post-shareBox__item {
+  display: inline-block;
+  width: 18px;
+  margin-right: 8px;
+}
+
+.lb-post-shareBox__item img {
+  vertical-align: bottom;
+}
+
+.lb-post-permalink {
+
 }
 
 .lb-post-sticky,
