--- a/less/tags.less
+++ b/less/tags.less
@@ -74,6 +74,15 @@ button.active {
     color: #27496d;
 }
 
+article h4, article h5 {
+    font-size: 1.06em;
+    font-weight: bold;
+}
+
+article h5 {
+    font-size: 1em;
+}
+
 article b,
 article strong {
     font-weight: bold;
@@ -106,6 +115,7 @@ blockquote p {
 blockquote > h4 {
     font-family: "Georgia", "Times New Roman", serif;
     font-size: 1.2em;
+    font-weight: normal;
     font-style: italic;
     display: inline-block;
     position: relative;
