fix: output logo image show.

--- a/client/app/scripts/liveblog-edit/views/settings.html
+++ b/client/app/scripts/liveblog-edit/views/settings.html
@@ -409,7 +409,8 @@
 <!-- MODAL FOR ADDING EDITING OUTPUTS -->
 <output-modal
     modal-active="settings.outputModalActive"
-    output="settings.output"
+    output="settings.output",
+    old-output="settings.oldOutput",
     outputs="settings.outputs"
     blog="settings.blog"
 ></output-modal>
