--- a/client/app/scripts/liveblog-edit/views/output-modal.html
+++ b/client/app/scripts/liveblog-edit/views/output-modal.html
@@ -96,10 +96,11 @@
                                 </div>
                             </div>
 
-                            <div class="preview" ng-if="vm.output.preview_logo.url">
+                            <div class="preview" ng-if="vm.output.preview_logo.img">
                                 <div class="crop-area">
                                     <div class="preview">
                                         <div sd-plain-image
+                                            class="preview-large">
                                             data-src="vm.output.preview_logo.url"
                                             data-progress-width="vm.output.progress_logo.width"
                                             data-file="vm.output.preview_logo.img"
@@ -110,6 +111,18 @@
                                             data-msg-error-max="Sorry, but logo image must smaller then 250x50"
                                             data-msg-error-min="Sorry, but logo image must be at least 20x20"
                                         ></div>
+                                    </div>
+                                </div>
+                                <figure class="ads-media-buttons">
+                                    <button class="btn btn-warning pull-right" ng-click="vm.removeLogoImage()" translate>Remove</button>
+                                </figure>
+                            </div>
+                            <div class="preview" ng-if="vm.output.preview_logo.url && !vm.output.preview_logo.img">
+                                <div class="crop-area">
+                                    <div class="preview">
+                                        <div class="preview-large">
+                                            <img ng-src="{{vm.output.preview_logo.url}}" class="preview-target-1">
+                                        </div>
                                     </div>
                                 </div>
                                 <figure class="ads-media-buttons">
