--- a/client/app/scripts/liveblog-bloglist/styles/liveblog-bloglist.scss
+++ b/client/app/scripts/liveblog-bloglist/styles/liveblog-bloglist.scss
@@ -20,7 +20,7 @@
     }
     .list-container {
         position: absolute;
-        top: $nav-height;
+        top: $nav-height + 1;
         left: 0; right: 0; bottom: 0;
         padding: 30px;
         overflow-y: auto;
