--- a/client/app/scripts/liveblog-edit/views/settings.html
+++ b/client/app/scripts/liveblog-edit/views/settings.html
@@ -21,7 +21,7 @@
             <h3 class="page-nav-title">Settings</h3>
             <button ng-click="settings.saveAndClose()" class="btn btn--primary pull-right" type="button" translate ng-disabled="!(settings.forms.dirty || settings.forms[settings.tab].$dirty)">Done</button>
             <button ng-click="settings.save()"  class="btn btn--primary pull-right" type="button" translate ng-disabled="!(settings.forms.dirty || settings.forms[settings.tab].$dirty)">Save</button>
-            <button ng-click="settings.close()" class="btn btn-default pull-right last-right" type="button" translate>Cancel</button>
+            <button ng-click="settings.close()" class="btn btn-default pull-right" type="button" translate>Cancel</button>
         </div>
         <div class="tabbable outer">
             <ul class="nav-tabs nav-stacked">
