--- a/client/app/scripts/liveblog-edit/styles/settings.scss
+++ b/client/app/scripts/liveblog-edit/styles/settings.scss
@@ -15,7 +15,7 @@ $PADDING: 20px;
         > .subnav {
             top: 1 - $SUBNAV_HEIGHT;
             background-color: #eaeaea;
-            padding: 0 0 0 20px;
+            padding: 0 20px;
         }
         .tab-content {
             > .header {
