--- a/client/app/scripts/liveblog-freetypes/styles/freetypes.scss
+++ b/client/app/scripts/liveblog-freetypes/styles/freetypes.scss
@@ -7,17 +7,17 @@
         overflow-y: auto;
         ul {
             li {
-                margin-left: 40px;
+                //margin-left: 40px;
             }
         }
     }
     .pills-list {
         max-width: 650px;
-        margin-top: 2px;
+        margin: 0;
+        padding-left: 2px;
         >li {
             background: #fff;
-            margin-bottom: 6px;
-            margin-right: 2px;
+            margin-bottom: 6px;            
             border-radius: 2px;
             padding: 10px 16px;
             min-height: 18px;
