Finished permalink and bug fixes

--- a/server/liveblog/themes/themes_assets/default/templates/template-post.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-post.html
@@ -88,7 +88,7 @@
 
     <!-- permalink -->
     <div class="lb-post-permalink">
-      <a href="google.com" id="{{ item._id }}" target="_blank">
+      <a id="{{ item._id }}" target="_blank">
         <img src="{{ assets_root }}images/action_link.svg" class="lb-post-linkIcon" />
       </a>
     </div>
