Squashed 'server/liveblog/themes/themes_assets/default/' changes from dd6092b..761f4fd
761f4fd fix: lint issues.
a0e9b69 chore: build.
faa18dc feature: permalink added.
7f036b3 fix: sorting button not working.
fe789e3 Merge pull request #66 from aleksandarjelicic/master
5624881 slideshow changes

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: 761f4fd5e716d7d7b8ad761fc0fa9f145a3ca03d

--- a/less/slideshow.less
+++ b/less/slideshow.less
@@ -119,17 +119,29 @@ article.slideshow div.items-container {
   button.fullscreen {
     top: 0px;
     right: 40px;
+    img {
+      width: 24px;
+      height: 24px;
+    }
   }
 
   button.close {
     top: 0;
     right: 0;
     z-index: 2;
+    img {
+      width: 24px;
+      height: 24px;
+    }
   }
 
   button.arrows {
     top: 0;
     height: 100%;
+    img {
+      width: 24px;
+      height: 24px;
+    }
   }
 
   button.arrows.prev {
