--- a/less/embed.less
+++ b/less/embed.less
@@ -102,7 +102,7 @@
 
 // Comment
 
-.comment {
+form.comment {
   outline: 2px solid #e9e9e9;
   .animate_smooth(max-height, 0.6s);
   margin: 5px;
@@ -599,7 +599,7 @@ article.lb-post:after {
 .lb-author {
   position: relative;
   margin: -22px 0px 15px;
-  max-width: 220px;
+  max-width: 265x;
   height: 47px;
   float: right;
   display: flex;
