--- a/server/liveblog/blogs/templates/embed.html
+++ b/server/liveblog/blogs/templates/embed.html
@@ -39,7 +39,7 @@
         api_host: '{{ api_host }}',
         assets_root: '{{ assets_root }}',
         debug: {{ debug | tojson | safe }},
-        l10n: {{ l10n | tojson | safe }}
+        i18n: {{ i18n | tojson | safe }}
     };
 </script>
     {% if debug %}
