Squashed 'server/liveblog/themes/themes_assets/default/' changes from 5bd172f..b70df69
b70df69 Merge pull request #74 from liveblog/feature/i18n
1287b33 fix: rebuild and added missing text.
a1b9e85 fix: this is not an amp only, feature.
9d07aeb Merge branch 'master' into feature/i18n
f674ee6 feature: added language support.
e1e37ac Merge pull request #73 from liveblog/highlights
5fc6d0d Changed labels in theme settings
85efcdc Fixed sharebox bug
a6c124a Added highilghts filter
546d21c Merge pull request #71 from liveblog/feature/extend-final
e4e2c5c chore: rebuild
9602647 Merge branch 'master' into feature/extend-final
2069efb Merge pull request #72 from aleksandarjelicic/changes
e072c46 chore: rebuild
e020cb7 Merge remote-tracking branch 'liveblog/master' into changes
d48ad68 border fix
b1520ff blog headline and description margins
7f005a2 header bar fix
f3336f9 social share box margins, delay on hover off, responsiveness
3d9137a chore: rebuild.
02a42c2 Merge branch 'master' into feature/extend-final
1491b4e Merge pull request #70 from liveblog/fix/delete-post
d148acc fix: added missing versioning.
f12daee permalink animation
ac0cc70 fix: added theme extension mechanism.
e56e312 feature: clear comment dialog when successfull.
c711649 fix: receive deleted posts in update requests.
4e8469e Merge pull request #69 from liveblog/socialShare
54f5221 Added social share button
a900c98 Merge pull request #68 from liveblog/feature/comments-design

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: b70df699909cc5bc1c12c15128edc7d62a5b33a5

--- a/templates/template-comment.html
+++ b/templates/template-comment.html
@@ -1,17 +1,17 @@
 <form class="comment hide">
   <div class="comment__wrap">
-    <h2 class="comment__headline">Post a comment</h2>
+    <h2 class="comment__headline">{{ translate('Post a comment') }}</h2>
     <div>
-      <input type="name" placeholder="Name" id="comment-name" />
+      <input type="name" placeholder="{{ translate('Name *') }}" id="comment-name" />
     </div>
     <div>
-      <textarea placeholder="Comment" id="comment-content"></textarea>
+      <textarea placeholder="{{ translate('Comment *') }}" id="comment-content"></textarea>
     </div>
     <div>
-      <button class="comment__button">Send</button>
-      <button class="comment__button comment__button--grey" data-js-close-comment-dialog>Cancel</button>
+      <button class="comment__button">{{ translate('Send') }}</button>
+      <button class="comment__button comment__button--grey" data-js-close-comment-dialog>{{ translate('Cancel')  }}</button>
     </div>
   </div>
 </form>
 
-<div class="comment-sent hide">Your comment has been sent for approval</div>
+<div class="comment-sent hide">{{ translate('Your comment was sent for approval') }}.</div>
