Squashed 'server/liveblog/themes/themes_assets/default/' changes from 0d1d19a..179a9b9
179a9b9 fix: minor issues.

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: 179a9b937650684bffd70a0cf3970e106225dcd6

--- a/less/embed.less
+++ b/less/embed.less
@@ -114,6 +114,7 @@ form.comment {
 form.comment.hide, div.comment-sent.hide {
   outline: 0px;
   max-height: 0px;
+  display: none;
 }
 
 .comment__wrap {
