--- a/templates/template-post.html
+++ b/templates/template-post.html
@@ -1,12 +1,4 @@
-{% macro translate(text) %}
-{% if not options.i18n[settings.language] %}
-    {{ text }}
-{% elif not options.i18n[settings.language][text] %}
-    {{ text }}
-{% else %}
-    {{ options.i18n[settings.language][text] }}
-{% endif %}
-{% endmacro %}
+{% macro translate(text) %}{% if not options.i18n[settings.language] %}{{ text }}{% elif not options.i18n[settings.language][text] %}{{ text }}{% else %}{{ options.i18n[settings.language][text] }}{% endif %}{% endmacro %}
 
 {% set mainItem = item.groups[1].refs[0].item %}
 {% if mainItem.commenter %}
