--- a/templates/template-timeline.html
+++ b/templates/template-timeline.html
@@ -1,12 +1,4 @@
-{% macro translate(text) %}
-{% if not options.i18n[settings.language] %}
-    {{ text }}
-{% elif not options.i18n[settings.language][text] %}
-    {{ text }}
-{% else %}
-    {{ options.i18n[settings.language][text] }}
-{% endif %}
-{% endmacro %}
+{% macro translate(text) %}{% if not options.i18n[settings.language] %}{{ text }}{% elif not options.i18n[settings.language][text] %}{{ text }}{% else %}{{ options.i18n[settings.language][text] }}{% endif %}{% endmacro %}
 
 {% block timeline %}
 <div class="lb-timeline {{ settings.language }}">
@@ -48,12 +40,12 @@
         <div
           class="sorting-bar__order {%if settings.postOrder == 'newest_first' %}sorting-bar__order--active{% endif %}"
           data-js-orderby_descending>
-          {{  translate("Oldest first") }}
+          {{  translate("Newest first") }}
         </div>
         <div
           class="sorting-bar__order {%if settings.postOrder == 'oldest_first'%}sorting-bar__order--active{% endif %}"
           data-js-orderby_ascending>
-          {{ translate("Newest first") }}
+          {{ translate("Oldest first") }}
         </div>
       </div>
     </div>
@@ -98,11 +90,9 @@
         {% endfor %}
       </section>
     {% endif %}
-    {% if api_response.posts._items|length == 0 %}
-      <div class="lb-post empty-message">
+      <div data-empty-message class="lb-post empty-message {% if api_response.posts._items|length %}mod--displaynone{% endif %}">
         <div>{{ translate("No posts for now") }}</div>
       </div>
-      {% else %}
       <section class="lb-posts list-group normal">
         {% for item in api_response.posts._items %}
           {% if not item.deleted %}
@@ -114,7 +104,6 @@
         <button class="lb-button load-more-posts" data-js-loadmore>
             {{ translate("Load more posts") }}
         </button>
-      {% endif %}
     {% endif %}
   </div>
   <!-- Timeline End -->
