--- a/templates/template-post.html
+++ b/templates/template-post.html
@@ -10,11 +10,11 @@
 <!-- sticky position toggle -->
 {% if item.sticky and settings.stickyPosition == 'top' %}
 <article
-  class="lb-sticky-top-post list-group-item {{ type }}"
+  class="lb-sticky-top-post list-group-item {{ type }} {% if display %}mod--displaynone{% endif %}"
   data-js-post-id="{{ item._id }}">
   {% else %}
 <article
-  class="lb-post list-group-item show-author-avatar {{ type }} {% if item.lb_highlight %}lb-post--highlighted{% endif %}"
+  class="lb-post list-group-item show-author-avatar {{ type }} {% if item.lb_highlight %}lb-post--highlighted{% endif %} {% if display %}mod--displaynone{% endif %}"
   data-js-post-id="{{ item._id }}">
     
   <div class="lb-type lb-type--{{ item.post_items_type }}"></div>
