--- a/templates/template-timeline.html
+++ b/templates/template-timeline.html
@@ -81,6 +81,12 @@
 
   <!-- Timeline -->
   <div class="timeline-body timeline-body--loaded">
+      <div data-one-new-update class="lb-post new-updates mod--displaynone">
+        <div>{{ translate("See one new update") }}</div>
+      </div>
+      <div data-new-updates class="lb-post new-updates mod--displaynone">
+        <div>{{ translate("See new updates") }}</div>
+      </div>
     {% if settings.stickyPosition == 'bottom' and api_response.stickyPosts._items|length > 0 %}
       <section class="lb-posts list-group sticky">
         {% for item in api_response.stickyPosts._items %}
