Squashed 'server/liveblog/themes/themes_assets/default/' changes from ce303c9..cc1dbfb
cc1dbfb Merge pull request #75 from aleksandarjelicic/changes
7829252 fix tests.
0326b4a comment fix
8c8cc3e bigger load more button
955c938 pin posts fix
d9f993d highlights button
0af34e4 header bar logo fixes for responsiveness and different languages
4195b22 comment button and comment box fixes

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: cc1dbfb4734d5a822117e99a252a0a5ef65ad537

--- a/less/comments.less
+++ b/less/comments.less
@@ -9,8 +9,9 @@
     }
 }
 .lb-author__avatar--comment {
-    background: #fff;
+    background: transparent;
     border-color: transparent;
+		border-radius: 0px;
 }
 
 .lb-author--indent {
