Squashed 'server/liveblog/themes/themes_assets/default/' changes from cc1dbfb..516b512
516b512 Merge pull request #76 from liveblog/feature/mobileMenu
7410d94 merge
864bc13 Merge branch 'master' into feature/mobileMenu
52916fc feature: mobile navigation LBSD-1853

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: 516b51201692ff1e2c69561a093d525d4075e7f2

--- a/less/embed.less
+++ b/less/embed.less
@@ -279,8 +279,8 @@ form.comment.hide .comment__wrap, div.comment-sent.hide .comment__wrap {
 }
 
 .sorting-bar__orders {
-    float: left;
-}
+    float: left
+  }
 
 .sorting-bar__order {
     float: left;
@@ -298,6 +298,45 @@ form.comment.hide .comment__wrap, div.comment-sent.hide .comment__wrap {
     margin-bottom: -2px;
     //border-bottom: 4px solid @lbgreen;
     border-bottom: 2px solid @black;
+}
+
+.sorting-bar__dropdownBtn {
+  display: none;
+  background: transparent url('../images/dropdown_arrow.svg') right 0.5em no-repeat;
+  padding-right: 20px;
+  cursor: pointer;
+  padding-left: .5rem;
+  position: relative;
+  z-index: 2;
+}
+
+@media @medium {
+  .sorting-bar__dropdownBtn {
+    display: block;
+  }
+  .sorting-bar__dropdownContent {
+    display: none;
+    position: absolute;
+    top: 0;
+    z-index: 1;
+    background-color: #fff;
+    padding: 2.2em 25px .5rem .5rem;
+    box-shadow: 4px 6px 10px 0px rgba(0, 0, 0, 0.5);
+
+    &--active {
+      display: block;
+    }
+  }
+
+  .sorting-bar__order {
+    float: none;
+    margin-right: 0px;
+  }
+
+  .sorting-bar__order--active, .sorting-bar__order:hover {
+    border: none;
+    margin-bottom: 0px;
+  }
 }
 
 .header-bar__highlight {
@@ -1139,16 +1178,6 @@ body .scorecard-top__info {
 
     .header-bar {
         margin: 10px 0 0 0px;
-    }
-
-    .sorting-bar__order {
-        padding-bottom: 3px;
-    }
-
-    .sorting-bar__order--active,
-    .sorting-bar__order:hover {
-        border-bottom: 3px solid @lbgreen;
-        padding-bottom: 3px;
     }
 
     .lb-type {
