Squashed 'server/liveblog/themes/themes_assets/default/' changes from cc1dbfb4..5e74ba91
5e74ba91 Merge pull request #77 from aleksandarjelicic/changes
ffed6ad1 move highlight button
3e4a734a scorecard changes
516b5120 Merge pull request #76 from liveblog/feature/mobileMenu
7410d944 merge
864bc13a Merge branch 'master' into feature/mobileMenu
52916fc6 feature: mobile navigation LBSD-1853

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: 5e74ba9120cd725dc735fe76eab63dc574dbc661

--- a/less/embed.less
+++ b/less/embed.less
@@ -55,7 +55,7 @@
 .header-bar__comment {
   position: relative;
   color: #999999;
-  margin-right: 30px;
+  margin-right: 10px;
   padding: 0px 0px 8px 0px;
   border: none;
   transition: color 0.1s ease-out;
@@ -279,8 +279,8 @@ form.comment.hide .comment__wrap, div.comment-sent.hide .comment__wrap {
 }
 
 .sorting-bar__orders {
-    float: left;
-}
+    float: left
+  }
 
 .sorting-bar__order {
     float: left;
@@ -298,6 +298,45 @@ form.comment.hide .comment__wrap, div.comment-sent.hide .comment__wrap {
     margin-bottom: -2px;
     //border-bottom: 4px solid @lbgreen;
     border-bottom: 2px solid @black;
+}
+
+.sorting-bar__dropdownBtn {
+  display: none;
+  background: transparent url('../images/dropdown_arrow.svg') right 0.5em no-repeat;
+  padding-right: 20px;
+  cursor: pointer;
+  padding-left: .5rem;
+  position: relative;
+  z-index: 2;
+}
+
+@media @medium {
+  .sorting-bar__dropdownBtn {
+    display: block;
+  }
+  .sorting-bar__dropdownContent {
+    display: none;
+    position: absolute;
+    top: 0;
+    z-index: 1;
+    background-color: #fff;
+    padding: 2.2em 25px .5rem .5rem;
+    box-shadow: 4px 6px 10px 0px rgba(0, 0, 0, 0.5);
+
+    &--active {
+      display: block;
+    }
+  }
+
+  .sorting-bar__order {
+    float: none;
+    margin-right: 0px;
+  }
+
+  .sorting-bar__order--active, .sorting-bar__order:hover {
+    border: none;
+    margin-bottom: 0px;
+  }
 }
 
 .header-bar__highlight {
@@ -1130,6 +1169,35 @@ body .scorecard-top__info {
         margin: 0px auto;
         margin-top: 110px;
     }
+    body .scorecard-top {
+      padding: 20px;
+    }
+
+    body .scorecard-top__column {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+    body .scorecard-top__column--result {
+        flex: 0 0 100%;
+        max-width: 100%;
+        order: 0;
+    }
+    body .scorecard-top__logoWrap {
+        height: 60px;
+    }
+    body .scorecard-top__logoWrap img, body .scorecard-top__column--result {
+        max-height: 60px;
+    }
+    body .scorecard-top span.team-name {
+        font-size: 18px;
+    }
+    body .scorecard-top span.team-score {
+        font-size: 32px;
+        margin-bottom: 6px;
+    }
+    body .scorecard-top .scorecard-top__scorers {
+        display: none;
+    }
 }
 
 @media @small {
@@ -1139,16 +1207,6 @@ body .scorecard-top__info {
 
     .header-bar {
         margin: 10px 0 0 0px;
-    }
-
-    .sorting-bar__order {
-        padding-bottom: 3px;
-    }
-
-    .sorting-bar__order--active,
-    .sorting-bar__order:hover {
-        border-bottom: 3px solid @lbgreen;
-        padding-bottom: 3px;
     }
 
     .lb-type {
